# grit

./: .gitignore  Cargo.toml  README.md  build.rs
proto/: grit.proto
src/: main.rs
src/api/: library.rs  mod.rs
src/core/: library.rs  mod.rs
src/db/: mod.rs
src/handler/: library.rs  mod.rs
web/: package-lock.json  package.json
