[package]
name = "grit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
prost = "0.11"
tonic = "0.8"
tokio = { version = "1.25.0", features = ["full"] }

[build-dependencies]
tonic-build = "0.8"